--- a/Session 1/index.html
+++ b/Session 1/index.html
@@ -5,8 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="index.js"></script>
+    <script>
+        let x = 'Câu 1 : Sai khi tên bắt đầu bằng 1 số, kết thúc bằng 1 kí tự đặc biệt, tên biến ko được trùng với tên keywords của js';
+        console.log(x);
+        var z = 10;
+        console.log(typeof(z));
+        let a ='Câu 2 : 1b , 2a, 3c e , 4d'
+        console.log(a);
+        let message = 'Coding is great';
+        console.log(message);
+        let studentCount = 0;
+        console.log(studentCount);
+        message = 'Coding might not be easy, but still great';
+        console.log(message);
+        studentCount = 16;
+        console.log(studentCount);
+        studentCount++;
+        console.log(studentCount);
+        message = message.toLowerCase();
+        console.log(message);
+        alert('You look beautiful today');
+        let yourName = prompt('Hi there, your name pls');
+        console.log(yourName);
+        let firstName = prompt('what is your first name?');
+        let lastName = prompt('What is your last name?');
+        alert('Hi ' + firstName +' ' + lastName );
+        let b = prompt('Side length of the square'); 
+        alert('the square area is ' + b*b );
+        let d = prompt('Radius of the circle');
+        alert('The circle area is ' + 3.14*d*d);
+        {
+        let e = prompt('The temperature in Celsius');
+        let f = e*1.8+32;
+        alert(e + `(C) = ` + f + `(F)`);
+        }       
+
+
+
+    </script>
 </head>
 <body>
+    
     
 </body>
 </html>
