--- a/Session 2/index.html
+++ b/Session 2/index.html
@@ -17,37 +17,37 @@
             console.log('Trả về giá trị đúng hoặc sai');
 
         }
-        {
-            for(let i=0;i<8;i++){
-                console.log(i);
-            }
-            let n = prompt('Enter a number');
-            for(let i=0;i<=n;i++){
-                console.log(i);
-             }
-            n = prompt('Enter a number');
-            for(let i=3;i<=n;i++){
-                console.log(i); 
-            }
-            let c = prompt('Enter a number');
-            n = prompt('Enter a number');
-            for(let i=c;i<=n;i++){
-                console.log(i);
-            }
-        {  
-             c = Number(prompt('Enter a number'));
-             n = Number(prompt('Enter a number'));
-            for(let i=c; i<=n;i=i+3){
-                console.log(i);
-            }
-        }
-            c = Number(prompt('Enter a number'));
-            n = Number(prompt('Enter a number'));
-            let s = Number(prompt('Enter a number'));
-            for(let i=c;i<=n;i+=s){
-                console.log(i);
-            }
-        }
+        // {
+        //     for(let i=0;i<8;i++){
+        //         console.log(i);
+        //     }
+        //     let n = prompt('Enter a number');
+        //     for(let i=0;i<=n;i++){
+        //         console.log(i);
+        //      }
+        //     n = prompt('Enter a number');
+        //     for(let i=3;i<=n;i++){
+        //         console.log(i); 
+        //     }
+        //     let c = prompt('Enter a number');
+        //     n = prompt('Enter a number');
+        //     for(let i=c;i<=n;i++){
+        //         console.log(i);
+        //     }
+        // {  
+        //      c = Number(prompt('Enter a number'));
+        //      n = Number(prompt('Enter a number'));
+        //     for(let i=c; i<=n;i=i+3){
+        //         console.log(i);
+        //     }
+        // }
+        //     c = Number(prompt('Enter a number'));
+        //     n = Number(prompt('Enter a number'));
+        //     let s = Number(prompt('Enter a number'));
+        //     for(let i=c;i<=n;i+=s){
+        //         console.log(i);
+        //     }
+        // }
         {
             let sum = 1;
             n = Number(prompt('Enter a number'));
